<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="currency"
            type="com.avs.rates.currency.BaseCurrency" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivFlagImage"
            android:layout_width="@dimen/dimen_42dp"
            android:layout_height="@dimen/dimen_42dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:background="@drawable/shape_oval"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="@string/flag_image_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCurrencyShortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="8dp"
            android:maxEms="6"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintBottom_toTopOf="@+id/tvCurrencyFullName"
            app:layout_constraintStart_toEndOf="@+id/ivFlagImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCurrencyFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginBottom="8dp"
            android:maxEms="20"
            android:maxLines="1"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivFlagImage"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrencyShortName" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:clickable="false"
            android:enabled="false"
            android:hint="@string/edit_text_hint"
            android:inputType="numberDecimal"
            android:maxEms="7"
            android:maxLength="@integer/edit_text_max_length"
            android:minEms="2"
            android:textAlignment="textEnd"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dimen_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>