<resources>
    <string name="app_name">Rates</string>
    <string name="currency_euro_title">Euro</string>
    <string name="currency_australian_dollar_title">Australian Dollar</string>
    <string name="currency_bulgarian_lev_title">Bulgarian Lev</string>
    <string name="currency_brazilian_real_title">Brazilian Real</string>
    <string name="currency_canadian_dollar_title">Canadian Dollar</string>
    <string name="currency_swiss_franc_title">Swiss Franc</string>
    <string name="currency_yuan_title">Yuan</string>
    <string name="currency_czech_koruna_title">Czech Koruna</string>
...
